# shrimpOS

./: .gitignore  Containerfile  README.md  build.sh  cosign.pub  recipe-main.yml  recipe-nvidia.yml
.github/workflows/: build.yml
copr/: atim-alacritty-fedora.repo  varlad-helix-fedora.repo
etc/dconf/db/local.d/: 01-base-settings  02-extension-settings
etc/shrimpos/: flatpaks  justfile  shrimpOS-startup-system.sh  shrimpos.desktop  system-service.sh  user-service.sh
etc/skel.d/.config/autostart/: shrimpOS-startup-system.desktop
etc/systemd/system/: shrimpos.service
etc/systemd/user/: shrimpos.service
rpmbuild/: shrimpos.spec
shrimpOS-flatpaks-installer/: Cargo.toml
shrimpOS-flatpaks-installer/src/: main.rs
