[package]
name = "shrimpOS-flatpaks-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4-components = "0.6.0-beta.1"
relm4-icons = { version = "0.6.0-beta.6", features = ["plus"] }

[dependencies.relm4]
version = "0.6.0-beta.1"
features = ["libadwaita"]

[dependencies.tokio]
version = "1"
features = ["full"]
